big changes in scss

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,99 +1,225 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./../css/main.css" />
     <title>Test UID - Grzegorz Makuch</title>
-</head>
-<body>
-    <header class="header" id="header">
-        <div class="header__container">
-            <div class="logo">
-                <div class="logo__icon">A</div>
-                <div class="logo__title">ACME CO.</div>
-            </div>
-            <nav class="navigation">
-                <a class="navigation__item" href="#">About Us</a>
-                <a class="navigation__item" href="#">Careers</a>
-                <a class="navigation__item" href="#">News</a>
-                <a class="navigation__item" href="#">Contact Us</a>
-            </nav>
+  </head>
+  <body>
+    <!-- HERO -->
+    <section id="hero">
+      <!-- HEADER -->
+      <header id="header">
+        <div class="container">
+          <a class="logo" href="#"><span class="icon">A</span>ACME CO.</a>
+          <nav>
+            <a href="#">About Us</a>
+            <a href="#">Careers</a>
+            <a href="#">News</a>
+            <a href="#">Contact Us</a>
+          </nav>
         </div>
-        <article class="hero">
-            <h1 class="hero__subheading">subheading</h1>
-            <h2 class="hero__heading">heading</h2>
-            <p class="hero__paragraph">Quisque, ipsum dolor sit amet consectetur adipisicing elit. Dolore enim quis vitae optio obcaecati debitis deserunt, commodi natus cum possimus nesciunt deleniti? Nostrum modi vero qui consequuntur, neque suscipit odit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda perspiciatis nam cum iste neque. Quia quis optio reiciendis nesciunt, fugit aliquid autem. Illum officia eum necessitatibus illo dolorem obcaecati sapiente. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Inventore optio praesentium cumque. Eligendi officiis explicabo quidem porro quos, dolores commodi repudiandae voluptates debitis nam placeat. Eum veritatis libero modi ullam.</p>
-            <button class="button-action">call to action &#8594;</button>
-            <a href="#content" class="see-more">see more</a>
-        </article>
-    </header>
-    <main>
-        <section class="content" id="content">
-            <h2 class="content__heading">quisque ac elit</h2>
-            <h3 class="content__subheading">subheading</h3>
-            <p class="content__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque illum a beatae excepturi, harum ab sed maiores nam quo! Excepturi, reprehenderit! Ea dolorum quaerat facere nulla dignissimos, assumenda fugiat voluptatum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias quos ad autem accusamus natus reiciendis necessitatibus veniam dignissimos enim error nulla, quis cupiditate accusantium quaerat sequi corrupti provident maxime ratione. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis inventore quia unde ipsum? Officiis ab dolorem provident mollitia at eius, numquam voluptates, magnam maxime in, quae odio. Tenetur, dicta possimus.</p>
-        </section>
-        <section class="gallery">
-            <div class="gallery__container">
-                <div class="image-viewer">
-                    <img class="image-viewer__picture" src="#">
-                    <div class="buttons-container__right">
-                        <div class="buttons-container__button js--btn-prev">&#8592;</div>
-                        <div class="buttons-container__button js--btn-next">&#8594;</div>
-                    </div>
-                    <div class="image-viewer__thumbnails">
-                    </div> <!--tutaj generuja sie miniatury-->
-                </div>
-                <aside class="aside-content__right">
-                    <h2 class="aside-content__heading">questions?</h2>
-                    <p class="aside-content__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. In nihil laboriosam sunt quidem distinctio sit, reprehenderit magni nemo, mollitia facilis omnis, corporis repudiandae fugiat eaque alias ad quia illum eveniet? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam voluptate odio soluta corporis molestias quo illo, ducimus rem esse recusandae doloremque! Commodi esse aut soluta eum culpa ut reprehenderit impedit?</p>
-                </aside>
-            </div>
-        </section>
-        <section class="bonus-content">
-            <h2 class="bonus-content__subheading">q subheading</h2>
-            <article>
-                <h3 class="bonus-content__heading">quisque ac elit</h3>
-                <p class="bonus-content__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque molestiae quibusdam, fugiat expedita quas, nam vitae odio dolor consequatur, ex obcaecati? Assumenda corrupti odio veniam amet non at consectetur nam! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo modi quam dolorum minima. Dolorum, quisquam in nihil, aspernatur molestiae nostrum quidem voluptas iste dolor molestias suscipit, maiores unde illum eveniet. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur blanditiis autem quod dignissimos totam, omnis eaque, placeat ut, suscipit repellat eos quas dolore. Ex libero laborum tempore iste, impedit delectus. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque, aspernatur, ut harum unde veritatis similique, maiores eligendi deleniti tenetur rem voluptates tempora. Consequuntur enim odio ex vero perspiciatis ipsam eveniet!</p>
-                <p class="bonus-content__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, doloribus hic non dolorem laborum, eaque quae sit quaerat praesentium, a sapiente vel. Laudantium ex qui distinctio dignissimos, dolore obcaecati repellendus.</p>
-                <p class="bonus-content__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit nemo sint fugiat officia veniam commodi temporibus cupiditate. Eligendi unde, libero deleniti, non, ut culpa officia corporis numquam cum alias obcaecati! Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, itaque voluptatum laborum in eius dolor dolores nisi non laudantium animi explicabo facilis, pariatur aut porro. Sit ipsa eveniet adipisci optio. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis, provident officia necessitatibus quod modi rem sint veniam id porro laborum? Suscipit sed vel exercitationem soluta necessitatibus, quidem tenetur quo id.</p>
-                <p class="bonus-content__paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis ipsam modi ipsa expedita? Nisi facere hic nesciunt fuga, ut at sequi dolores voluptate quod, quibusdam obcaecati nulla veritatis. Quidem, corporis?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea error eius voluptates ratione tenetur aut accusamus, dicta, nostrum magni, non quo. Quo, sit debitis quibusdam commodi nemo nesciunt voluptate dicta. Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta ad inventore nesciunt quisquam. Dolore laborum asperiores omnis suscipit perferendis nemo quis voluptate, commodi sapiente molestiae, beatae voluptates hic animi labore! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam qui ea, officia sed repudiandae doloribus porro praesentium recusandae accusamus atque odit natus quisquam voluptatibus ad? Labore corrupti tenetur molestiae amet.</p>
-            </article>
-        </section>
-        <section class="gallery2">
-            <div class="gallery2__container">
-                <aside class="aside-content__left">
-                    <h2 class="aside-content__heading">high quality</h2>
-                    <p class="aside-content__paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. In nihil laboriosam sunt quidem distinctio sit, reprehenderit magni nemo, mollitia facilis omnis, corporis repudiandae fugiat eaque alias ad quia illum eveniet? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam voluptate odio soluta corporis molestias quo illo, ducimus rem esse recusandae doloremque! Commodi esse aut soluta eum culpa ut reprehenderit impedit?</p>
-                </aside>
-                <div class="image-viewer">
-                    <img class="image-viewer__picture" src="#">
-                    <div class="buttons-container__left">
-                        <div class="buttons-container__button js--btn-prev">&#8592;</div>
-                        <div class="buttons-container__button js--btn-next">&#8594;</div>
-                    </div>
-                    <div class="image-viewer__thumbnails2">
-                    </div> <!--tutaj generuja sie miniatury-->
-                </div>
-            </div>
-        </section>
-    </main>
-    <footer class="footer">
-        <div class="footer__container">
-            <div class="footer-logo">
-                <a href="#header">A</a>
-            </div>
-            <nav class="navigation">
-                <a class="navigation__item" href="#">About Us</a>
-                <a class="navigation__item" href="#">Careers</a>
-                <a class="navigation__item" href="#">News</a>
-                <a class="navigation__item" href="#">Contact Us</a>
-            </nav>
-            <div class="copyright">&#xA9; Copyright by ACME Co.</div>
+      </header>
+      <div class="container">
+        <h2>SUBHEADING</h2>
+        <h1>HEADING</h1>
+
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima vel
+          repellendus explicabo! Doloremque quidem alias assumenda natus minus
+          quis obcaecati commodi officia dolores sapiente, ad velit, architecto
+          dolor voluptatum placeat. Lorem ipsum dolor sit amet consectetur,
+          adipisicing elit. Quam vero sint doloremque accusantium nemo eos
+          magnam voluptates perspiciatis at aperiam saepe repudiandae omnis,
+          dolorem alias molestias obcaecati ullam blanditiis similique?
+        </p>
+
+        <button class="button">CALL TO ACTION</button>
+        <a class="see-more" href="#content"
+          >SEE MORE<i class="fas fa-long-arrow-alt-down"></i
+        ></a>
+      </div>
+    </section>
+
+    <!-- CONTENT -->
+    <section id="content">
+      <div class="container">
+        <h2>QUISQUE AC ELIT</h2>
+        <h3>SUBHEADING</h3>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae sit
+          provident officia debitis eum ratione delectus doloribus iure, numquam
+          minima quidem cupiditate libero dolores possimus facilis laudantium
+          nihil velit eveniet. Lorem ipsum, dolor sit amet consectetur
+          adipisicing elit. Aliquam veritatis obcaecati aspernatur animi,
+          doloribus omnis quae quam quia, reiciendis iste quidem fugit in nulla
+          pariatur deleniti veniam magni dolore perferendis. Lorem, ipsum dolor
+          sit amet consectetur adipisicing elit. Officiis, nobis. Veritatis,
+          aperiam? Consequatur suscipit quasi voluptates maiores quo esse optio
+          nulla nihil veritatis perspiciatis iure voluptas fugit, ratione
+          voluptatum similique.
+        </p>
+      </div>
+    </section>
+
+    <!-- GALLERY -->
+    <section class="gallery gallery__first">
+      <div class="container">
+        <div class="img-viewer">
+          <img class="image-big" src="./../assets/img/1.jpg" />
+          <div class="thumbnails">
+            <img
+              class="thumbnails--item"
+              src="./../assets/img/thumbnails/1.jpg"
+            />
+            <img
+              class="thumbnails--item"
+              src="./../assets/img/thumbnails/2.jpg"
+            />
+            <img
+              class="thumbnails--item"
+              src="./../assets/img/thumbnails/3.jpg"
+            />
+            <img
+              class="thumbnails--item"
+              src="./../assets/img/thumbnails/4.jpg"
+            />
+          </div>
         </div>
+        <aside>
+          <h2>QUESTIONS?</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Reprehenderit soluta asperiores laborum provident consequuntur ipsam
+            quisquam iure earum velit accusamus, minus aut? Perspiciatis nihil
+            ipsa dolorum ab ducimus labore qui. Lorem, ipsum dolor sit amet
+            consectetur adipisicing elit. Fugit magni repellendus dolores, ab
+            eveniet harum itaque doloribus amet ea saepe tenetur quis
+            exercitationem consequatur ut. Iste quos quisquam fugit aliquid!
+          </p>
+        </aside>
+      </div>
+    </section>
+
+    <!-- BONUS CONTENT -->
+    <section id="bonus-content">
+      <div class="container">
+        <h3>Q SUBHEADING</h3>
+        <h2>QUSIQUE AC ELIT</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam quis
+          ea, consectetur, tempore quisquam cumque voluptates deserunt neque
+          tenetur earum nobis quam eaque asperiores ex modi in molestias harum.
+          Et. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Voluptatem ullam iure at placeat saepe dignissimos, aut maiores ex
+          repellendus assumenda beatae. Eius et enim harum assumenda molestiae
+          cumque minima similique? Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Enim iure libero non animi id, eum modi maiores
+          tenetur illum quia! Nisi, consectetur! Soluta numquam sed, totam quasi
+          a laborum dolorem! Lorem ipsum dolor, sit amet consectetur adipisicing
+          elit. Nam dolorem placeat totam autem, sed repellendus maxime
+          recusandae, sequi ullam possimus, accusamus rem veritatis laborum est
+          nobis dolore iste libero. Incidunt.
+        </p>
+        <br />
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti,
+          exercitationem! Deserunt odio excepturi saepe aliquid, ex at quos
+          voluptatem, facilis consectetur corporis non pariatur quod vero. Amet
+          distinctio ab quod? Lorem ipsum dolor sit amet consectetur,
+          adipisicing elit. Eaque perspiciatis, tempora non dignissimos
+          molestiae vitae impedit repellat, magni maiores deleniti sapiente quam
+          dolorem consequuntur inventore ipsum mollitia minus cumque
+          praesentium! Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Tenetur voluptatibus exercitationem, facilis eaque sequi, asperiores
+          maxime aspernatur rem natus laborum quas recusandae, earum nostrum
+          fugit veritatis a. Maxime, dolorum molestiae. Lorem ipsum dolor sit
+          amet, consectetur adipisicing elit. Eligendi voluptas quam sed
+          doloribus ratione natus odit adipisci suscipit tempore architecto ea
+          rem aliquam autem aperiam voluptate, consequuntur sapiente enim ex.
+        </p>
+        <br />
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque a quo
+          tempora eaque pariatur est ut excepturi magnam enim fuga! Dignissimos
+          laborum eius quidem optio sequi quaerat iure soluta recusandae. Lorem
+          ipsum dolor sit amet consectetur adipisicing elit. Eveniet laudantium,
+          accusantium sint repudiandae fugiat harum doloribus nihil provident
+          beatae recusandae corporis hic, consequuntur cupiditate quas assumenda
+          dicta reiciendis qui eligendi!
+        </p>
+        <br />
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim
+          suscipit natus quas necessitatibus illum cumque quia tempora et
+          voluptatibus voluptates reprehenderit velit eligendi qui, nemo dolor
+          asperiores commodi quaerat delectus. Lorem ipsum dolor sit amet
+          consectetur, adipisicing elit. Id, ea! Beatae tempora illo quidem
+          autem neque in nam doloremque facilis a explicabo distinctio ab,
+          nostrum maxime debitis excepturi sit doloribus. Lorem ipsum dolor sit
+          amet, consectetur adipisicing elit. Ipsam, nihil aliquam facilis,
+          minus sit quae necessitatibus inventore fuga nobis, animi vitae
+          voluptatum ut quam sint magni harum corrupti consequatur veritatis.
+        </p>
+      </div>
+    </section>
+
+    <!-- GALLERY -->
+    <section class="gallery gallery__second">
+      <div class="container">
+        <aside>
+          <h2>HIGH QUALITY</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Reprehenderit soluta asperiores laborum provident consequuntur ipsam
+            quisquam iure earum velit accusamus, minus aut? Perspiciatis nihil
+            ipsa dolorum ab ducimus labore qui. Lorem, ipsum dolor sit amet
+            consectetur adipisicing elit. Fugit magni repellendus dolores, ab
+            eveniet harum itaque doloribus amet ea saepe tenetur quis
+            exercitationem consequatur ut. Iste quos quisquam fugit aliquid!
+          </p>
+        </aside>
+        <div class="img-viewer">
+          <img class="image-big" src="./../assets/img/1.jpg" />
+          <div class="thumbnails">
+            <img
+              class="thumbnails--item"
+              src="./../assets/img/thumbnails/1.jpg"
+            />
+            <img
+              class="thumbnails--item"
+              src="./../assets/img/thumbnails/2.jpg"
+            />
+            <img
+              class="thumbnails--item"
+              src="./../assets/img/thumbnails/3.jpg"
+            />
+            <img
+              class="thumbnails--item"
+              src="./../assets/img/thumbnails/4.jpg"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- FOOTER -->
+    <footer>
+      <div class="container">
+        <a href="#"><span>A</span></a>
+        <nav>
+          <a href="#">About Us</a>
+          <a href="#">Careers</a>
+          <a href="#">News</a>
+          <a href="#">Contact Us</a>
+        </nav>
+        <span>&copy Copyright by ACME Co.</span>
+      </div>
     </footer>
+
+    <!-- SCRIPTS -->
     <script src="./../js/scripts.js"></script>
-</body>
+  </body>
 </html>
