lots of changes 2

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -13,7 +13,10 @@
       <!-- HEADER -->
       <header id="header">
         <div class="container">
-          <a class="logo" href="#"><span class="icon">A</span>ACME CO.</a>
+          <div class="logo">
+            <div class="logo__icon">A</div>
+            <div class="logo__brand">ACME CO.</div>
+          </div>
           <nav>
             <a href="#">About Us</a>
             <a href="#">Careers</a>
@@ -86,6 +89,10 @@
               class="thumbnails--item"
               src="./../assets/img/thumbnails/4.jpg"
             />
+          </div>
+          <div class="arrow">
+            <a class="arrow__item">P</a>
+            <a class="arrow__item">N</a>
           </div>
         </div>
         <aside>
@@ -201,21 +208,27 @@
               src="./../assets/img/thumbnails/4.jpg"
             />
           </div>
+          <div class="arrow">
+            <a class="arrow__item">P</a>
+            <a class="arrow__item">N</a>
+          </div>
         </div>
       </div>
     </section>
 
     <!-- FOOTER -->
-    <footer>
+    <footer id="footer">
       <div class="container">
-        <a href="#"><span>A</span></a>
+        <div class="logo">
+          <div class="logo__icon">A</div>
+        </div>
         <nav>
           <a href="#">About Us</a>
           <a href="#">Careers</a>
           <a href="#">News</a>
           <a href="#">Contact Us</a>
         </nav>
-        <span>&copy Copyright by ACME Co.</span>
+        <div class="copyright">&copy Copyright by ACME Co.</div>
       </div>
     </footer>
 
