css tricks and mobile

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -18,7 +18,10 @@
             <div class="logo__icon">A</div>
             <div class="logo__brand">ACME CO.</div>
           </div>
-          <nav>
+          <!-- <nav id="burger">
+              <a href="#menu">Menu</a>
+          </nav> -->
+          <nav id="#menu">
             <a href="#">About Us</a>
             <a href="#">Careers</a>
             <a href="#">News</a>
@@ -199,7 +202,8 @@
     <footer id="footer">
       <div class="container">
         <div class="logo">
-          <div class="logo__icon logo__icon--footer-mod">A</div>
+          <!-- <div class="logo__icon logo__icon--footer-mod">A</div> -->
+          <a class="logo__icon logo__icon--footer-mod" href="#hero">A</a>
         </div>
         <nav>
           <a href="#">About Us</a>
